@@ -85,23 +85,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
      2.2.x version of the patch works
      +1 mturk, fuankg, rpluem
 
-   * core: Lower memory consumption in case that flush buckets are passed thru
-     the chunk filter as last bucket of a brigade.
-     PR: 23567
-     Trunk version of patch:
-        http://svn.apache.org/viewcvs.cgi?rev=602735&view=rev
-     Backport version for 2.2.x of patch:
-        Trunk version of patch works
-     +1: rpluem, jorton, niq
-
-   * core: Lower memory consumption of ap_r* functions by reusing the brigade
-     instead of recreating it during each filter pass.
-     Trunk version of patch:
-        http://svn.apache.org/viewcvs.cgi?rev=603227&view=rev
-     Backport version for 2.2.x of patch:
-        Trunk version of patch works
-     +1: rpluem, jorton, niq
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
